Added link to YT and iframe, copy changes.

--- a/index.html
+++ b/index.html
@@ -92,19 +92,22 @@
   <div class="content">
     <h1>The Group.</h1>
     <h2>A podcast about darkness, danger, and discovery</h2>
-    <h3>The vampires claimed the ones they loved. One night, they dared to fight back.</h3>
+    <h3>The monsters claimed the ones they loved. One night, they dared to fight back.</h3>
 
-    <p>"The Group" is a gritty actual play podcast that dives deep into the world of supernatural horror, conspiracy, and personal reckoning.</p>
-    <p>Inspired in part by <em>Hunter: The Reckoning</em>, <em>Delta Green</em> and <em>The World of Darkness</em>, we follow a band of reluctant heroes—citizens and strangers—bound
+    <p>"The Group" is a gritty actual play podcast that dives deep into the world of supernatural horror, conspiracy, and personal reckoning. Starting in the 1980s, we follow multiple generations of heroes as they fight to reclaim the streets from
+      vampires, wizards, werewolves, fairies, ghosts, and an evil even more ancient.</p>
+    <p>Inspired in part by <em>Hunter: The Reckoning</em>, <em>Vampire: The Masquerade,</em> <em>Delta Green</em> and <em>The World of Darkness</em>, we follow a band of reluctant heroes—citizens and strangers—bound
         by a shared secret and the will to resist the darkness by any means necessary.</p>
     <p>This story blends intense character drama, occult investigation, and visceral action with an adrenaline shot of crime fiction, espionage, and noir with a darker twist.</p>
-    <p>Recommended for adults.</p>
+    <p>Recommended for mature listeners.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FponH64Wx_s?si=P2g8joFiYqV3gSo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/@TheGroupOfHunters" target="_NEW">View the YouTube Channel</a></p>
 
 
     <div id="mc_embed_shell">
         <div id="mc_embed_signup">
             <form action="https://magicbullet.us14.list-manage.com/subscribe/post?u=3f72dd036f546176ee857c6e8&amp;id=4c0bf37c09&amp;f_id=00eab4e5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
-                <div id="mc_embed_signup_scroll"><h2>Subscribe for updates and early access:</h2>
+                <div id="mc_embed_signup_scroll"><h2>JOIN THE HUNT! Subscribe for updates and early access:</h2>
                     <div class="mc-field-group"><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""  placeholder="Enter your email"></div>
                     <input type="hidden" name="tags" value="40191460">
                 <div id="mce-responses" class="clear foot">
